--- a/css/index.css
+++ b/css/index.css
@@ -99,7 +99,7 @@ button {
   font-size: 10px;
 }
 .page__play--guest {
-  padding-top: 100px;
+  padding-top: 50px;
   padding-left: 20px;
 }
 .page__play--guest--body {
@@ -124,6 +124,13 @@ button {
 .page__sidebar {
   padding-left: 100px;
 }
+.page__back-butoon {
+  display: none;
+  position: absolute;
+  top: 20px;
+  left: 240px;
+  z-index: 2;
+}
 .page__play--guest--button {
   display: flex;
   justify-content: center;
@@ -138,7 +145,7 @@ button {
 .login--page__body {
   padding: 40px 30px;
   border: 2px black solid;
-  display: grid;
+  display: none;
   gap: 20px;
 }
 .login--page__username {
@@ -163,23 +170,44 @@ button {
   align-items: center;
 }
 .login--page__buttons--body {
-  padding-top: 30px;
+  padding-top: 50px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   gap: 20px;
 }
 .login--page__button--login {
-  width: 170px;
-  padding: 20px;
+  width: 270px;
+  padding: 30px;
   border: 2px black solid;
 }
 .login--page__button--register {
-  width: 170px;
-  padding: 20px;
+  width: 270px;
+  padding: 30px;
   border: 2px black solid;
 }
 .login--page__button--forgot {
   font-size: 10px;
+  padding-top: 5px;
+  padding-left: 100px;
+}
+.login--page__sumbitbuttons {
+  display: none;
+  padding-left: 130px;
   padding-top: 20px;
+}
+.login--page__sumbitbutton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  border: 2px black solid;
+  border-radius: 20px;
+  padding: 20px 30px;
+}
+.login--page__body--for--login {
+  padding: 40px 30px 30px 30px;
+  border: 2px black solid;
+  display: none;
+  gap: 20px;
 }
